Updating JwtAuthenticationFilter and SecurittyConfig